<?xml 
version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2012 Binomed (http://blog.binomed.fr)
 *
 * Licensed under the Eclipse Public License - v 1.0;
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.eclipse.org/legal/epl-v10.html
 *
 * THE ACCOMPANYING PROGRAM IS PROVIDED UNDER THE TERMS OF THIS ECLIPSE PUBLIC 
 * LICENSE ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION OF THE PROGRAM 
 * CONSTITUTES RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT.
 */ 
 -->
<resources>

    <string name="app_name">BreizhCamp Rennes 2013</string>
    <string name="action_speakers">Speakers</string>
    <string name="action_sessions">Sessions</string>
    <string name="action_infos">Infos Pratiques</string>
    <string name="action_about">A propos</string>
    <string name="error_loading">Erreur pendant le chargement</string>
    <string name="no_sessions">Chargement en cours</string>
    <string name="no_speaker">Aucun speaker</string>
    <string name="drawer_open">Menu Ouvert</string>
    <string name="drawer_close">Menu Fermé</string>
    
    <!-- Sessions -->
    <string name="title_infos">Infos pratiques</string>
    <string name="title_session">Sessions</string>
    <string name="title_speakers">Speakers</string>
    <string name="tab_web">Web / Mobile</string>
    <string name="tab_cloud">Cloud / APIs</string>
    <string name="tab_agilite">Agilité</string>
    <string name="tab_devops">Devops</string>
    <string name="tab_extreme">eXtreme</string>
    <string name="tab_langages">Langages</string>
    <string name="tab_decouverte">Découverte</string>
    <string name="tab_tooling">Tooling</string>
    <string name="tab_keynote">Keynote</string>
    <!-- Infos -->
    <string name="tab_place">Lieu</string>
    <string name="tab_car">Comment Venir ? </string>
    <string name="tab_sleep">Où dormir</string>
    <string name="tab_after_party">After Party</string>
    <string name="tab_partenaires">Partenaires</string>
    <!-- Infos pratiques -->
    <string name="infos_place">Lieu</string>
    <string name="infos_place_desc">Ecole Epitech Nantes 16b-18, rue Flandres Dunkerque, 44100 NANTES </string>
    <string name="infos_place_name">Epitech</string>
    <string name="infos_place_place">16b-18, rue Flandres Dunkerque, 44100 NANTES </string>
    <string name="infos_car">S\'y rendre en voiture</string>
    <string name="infos_car_desc">L\'école étant en plein centre ville, nous préconisons aux automobilistes de se garer sur un parking relais tram ou un parking payant.</string>
    <string name="infos_sleep">Où dormir</string>
    <string name="infos_sleep_desc">Hôtel Ibis Tour de bretagne \nRéservations : (+33)2 40 35 39 00 \nDistance de l\'évènement : 15 minutes à pied</string>
    <string name="infos_sleep_name">Hôtel Ibis</string>
    <string name="infos_sleep_place">19 Rue Jean Jaurès, 44000 Nantes</string>
    <string name="infos_after_party">After Party</string>
    <string name="infos_after_party_desc">L\'after party se déroulera au bar le \'Melting Potes\'. Il s\'agit d\'une soirée SounderBox !  Les soirées sounderbox sont des soirées où la playlist de la soirée est décidée par les participants ! Un compte facebook est obligatoire pour utliser l\'application sounderbox. \n\nL\'entrée sera réservée aux participants du DevFest. La soirée commencera à 19h30.</string>
    <string name="infos_after_party_name">Melting Potes</string>
    <string name="infos_after_party_place">26 Boulevard de la Prairie au Duc, 44200 Nantes, France</string>
    <!-- Partenaires -->
    <string name="partner_premium">Premium</string>
    <string name="partner_gold">Gold</string>
    <string name="partner_silver">Silver</string>
    <string name="partner_school">Ecole</string>
    <string name="partner_google">Google</string>
    <string name="partner_genymobile">GenyMobile</string>
    <string name="partner_sqli">SQLI</string>
    <string name="partner_sii">SII</string>
    <string name="partner_zenika">Zenika</string>
    <string name="partner_softeam">Softeam</string>
    <string name="partner_epitech">Epitech</string>
    <string name="room">"Salle : "</string>
    <string name="level">Niveau</string>
    <string name="hour">Horaires</string>
    <!-- About -->
    <string name="about_content">DevFest Code Lab V1.0 \n Ecrit par Binomed avec le concours de SQLI Nantes. Application disponible sur Github</string>
    <string name="about_title">A propos</string>
    
    <string-array name="days">
        <item >day 1</item>
        <item >day 2</item>
    </string-array>
        

</resources>