<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2012 Binomed (http://blog.binomed.fr)
 *
 * Licensed under the Eclipse Public License - v 1.0;
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.eclipse.org/legal/epl-v10.html
 *
 * THE ACCOMPANYING PROGRAM IS PROVIDED UNDER THE TERMS OF THIS ECLIPSE PUBLIC 
 * LICENSE ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION OF THE PROGRAM 
 * CONSTITUTES RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT.
 */ 
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dip" >

    <Button
        android:id="@+id/home_btn_speakers"
        style="@style/HomeButton"
        android:drawableLeft="@drawable/ic_action_speakers"
        android:text="@string/action_speakers" />

    <Button
        android:id="@+id/home_btn_infos"
        style="@style/HomeButton"
        android:drawableLeft="@drawable/ic_action_infos"
        android:text="@string/action_infos" />

    <Button
        android:id="@+id/home_btn_sessions"
        style="@style/HomeButton"
        android:drawableLeft="@drawable/ic_action_sessions"
        android:text="@string/action_sessions" />


</LinearLayout>