<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2012 Binomed (http://blog.binomed.fr)
 *
 * Licensed under the Eclipse Public License - v 1.0;
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.eclipse.org/legal/epl-v10.html
 *
 * THE ACCOMPANYING PROGRAM IS PROVIDED UNDER THE TERMS OF THIS ECLIPSE PUBLIC 
 * LICENSE ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION OF THE PROGRAM 
 * CONSTITUTES RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT.
 */ 
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
  	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        
  	 <!-- Preniums -->   

    <TextView
        android:id="@+id/premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dip"
        android:text="@string/partner_premium"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <ImageView 
            android:id="@+id/separatorPremium"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginTop="2dip"
            android:layout_below="@+id/premium"
            android:src="@drawable/horizontal_line"
            />

    <TextView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separatorPremium"
        android:layout_marginTop="10dip"
        android:paddingLeft="30dip"
        android:text="@string/partner_google" />

     <ImageView
         android:id="@+id/imgGoogle"
         android:layout_width="150dip"
         android:layout_height="75dip"
         android:layout_below="@+id/google"
         android:layout_centerHorizontal="true"
         android:src="@drawable/google" />
  	 
  	 <!-- Gold -->   

    <TextView
        android:id="@+id/gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
         android:layout_below="@+id/imgGoogle"
        android:text="@string/partner_gold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <ImageView 
            android:id="@+id/separatorGold"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginTop="2dip"
            android:layout_below="@+id/gold"
            android:src="@drawable/horizontal_line"
            />

    <TextView
        android:id="@+id/genymobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separatorGold"
        android:layout_marginTop="10dip"
        android:paddingLeft="30dip"
        android:text="@string/partner_genymobile" />

     <ImageView
         android:id="@+id/imgGenymobile"
         android:layout_width="150dip"
         android:layout_height="75dip"
         android:layout_below="@+id/genymobile"
         android:layout_centerHorizontal="true"
         android:src="@drawable/genymobile" />
    
    <TextView
        android:id="@+id/sqli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgGenymobile"
        android:layout_marginTop="10dip"
        android:paddingLeft="30dip"
        android:text="@string/partner_sqli" />

     <ImageView
         android:id="@+id/imgSqli"
         android:layout_width="150dip"
         android:layout_height="75dip"
         android:layout_below="@+id/sqli"
         android:layout_centerHorizontal="true"
         android:src="@drawable/sqli" />
  	 
  	 <!-- Silver -->   

    <TextView
        android:id="@+id/silver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
         android:layout_below="@+id/imgSqli"
        android:text="@string/partner_silver"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <ImageView 
            android:id="@+id/separatorSilver"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginTop="2dip"
            android:layout_below="@+id/silver"
            android:src="@drawable/horizontal_line"
            />

    <TextView
        android:id="@+id/sii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separatorSilver"
        android:layout_marginTop="10dip"
        android:paddingLeft="30dip"
        android:text="@string/partner_sii" />

     <ImageView
         android:id="@+id/imgSii"
         android:layout_width="150dip"
         android:layout_height="75dip"
         android:layout_below="@+id/sii"
         android:layout_centerHorizontal="true"
         android:src="@drawable/sii" />
    
    <TextView
        android:id="@+id/zenika"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgSii"
        android:layout_marginTop="10dip"
        android:paddingLeft="30dip"
        android:text="@string/partner_zenika" />

     <ImageView
         android:id="@+id/imgZenika"
         android:layout_width="150dip"
         android:layout_height="75dip"
         android:layout_below="@+id/zenika"
         android:layout_centerHorizontal="true"
         android:src="@drawable/zenika" />

     <TextView
        android:id="@+id/softeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgZenika"
        android:layout_marginTop="10dip"
        android:paddingLeft="30dip"
        android:text="@string/partner_softeam" />

     <ImageView
         android:id="@+id/imgSofteam"
         android:layout_width="150dip"
         android:layout_height="75dip"
         android:layout_below="@+id/softeam"
         android:layout_centerHorizontal="true"
         android:src="@drawable/softeam" />
  	 
  	 <!-- School-->   

    <TextView
        android:id="@+id/school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
         android:layout_below="@+id/imgSofteam"
        android:text="@string/partner_school"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <ImageView 
            android:id="@+id/separatorSchool"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginTop="2dip"
            android:layout_below="@+id/school"
            android:src="@drawable/horizontal_line"
            />

    <TextView
        android:id="@+id/epitech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separatorSchool"
        android:layout_marginTop="10dip"
        android:paddingLeft="30dip"
        android:text="@string/partner_epitech" />

     <ImageView
         android:id="@+id/imgEpitech"
         android:layout_width="150dip"
         android:layout_height="75dip"
         android:layout_below="@+id/epitech"
         android:layout_centerHorizontal="true"
         android:src="@drawable/epitech" />
    
 
	</RelativeLayout>
</ScrollView>